--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ Flask==0.12.2
 idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
+matplotlib==2.0.2
 numpy==1.13.1
+pillow==4.2.1
 python-dateutil==2.6.1
 PyYAML==3.12
 requests==2.18.3
